--- a/index.html
+++ b/index.html
@@ -56,12 +56,16 @@
 <p>PyQT4, Pyuic</p>
 <h2>Install</h2>
 <p>Simply run the python script</p>
+<img src=http://dl.dropbox.com/u/248209/PyUIC4%20GUI.png> />
 <h2>License</h2>
 <p>GPL</p>
 <h2>Authors</h2>
-<p>adrianom (adriano.mandala@gmail.com)<br/><br/>      </p>
+<p>adrianom (adriano.mandala@gmail.com)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>adrianom (adriano.mandala@gmail.com)<br/>      </p>
+<p>adrianom (adriano.mandala@gmail.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
