--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <p>PyQT4, Pyuic</p>
 <h2>Install</h2>
 <p>Simply run the python script</p>
-<img src=http://dl.dropbox.com/u/248209/PyUIC4%20GUI.png> />
+<img src="http://dl.dropbox.com/u/248209/PyUIC4%20GUI.png" />
 <h2>License</h2>
 <p>GPL</p>
 <h2>Authors</h2>
