--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 <h2>Install</h2>
 <p>Simply run the python script</p>
 <img src="http://dl.dropbox.com/u/248209/PyUIC4%20GUI.png" />
+<img src="http://dl.dropbox.com/u/248209/PyUIC-GUI_screen_win.png" />
+http://dl.dropbox.com/u/248209/PyUIC-GUI_screen_win.png
 <h2>License</h2>
 <p>GPL</p>
 <h2>Authors</h2>
